# InTime_AI

./: .gitignore  README.md  auto_test.ipynb  face_test.ipynb  main.py  pyproject.toml
app/: app.py
app/api/: face_detect_api.py  ocr_api.py
app/core/: config.py  db.py  errors.py  face_detect.py  init_db.py  lifespan.py  model_loader.py  ocr.py
app/models/: FRModel_20250918.pkl  FRModel_20250918_state.pkl
app/services/: db_service.py  db_test_service.py  face_detect_service.py  face_recognition_service.py  ocr_service.py
app/sql/: member_insert_query.sql  query.sql
automation/: run_daily_report.py
automation/db/: db_access.py
automation/llm/: llm_client.py
automation/llm/prompts/: system.txt  user.txt
automation/services/: attendance_reporter.py
images/: labels.json
