[project]
name = "intime-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cmake>=4.1.0",
    "dlib>=20.0.0",
    "face-recognition>=1.3.0",
    "fastapi>=0.116.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "mediapipe>=0.10.21",
    "ollama>=0.5.4",
    "opencv-python>=4.11.0.86",
    "paddleocr>=3.2.0",
    "paddlepaddle>=3.2.0",
    "pandas>=2.3.2",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
